# roadmapper

./: .gitignore  1. build-dist.bat  1.json  2. test-dist.bat  3. deploy-dist.bat  DEVELOPING.md  LICENSE.md  MahereKaihanga.py  README.md  RoadMapGenerator.py  Roadmap.py  chinese.json  chocolate.json  custom_timeline.json  demo.py  generator.plantuml  generator.py  kaihanga.py  ko_KR_timeline_settings.json  my_roadmap.py  painter.py  pyproject.toml  rainbow-unicode.json  rainbow.json  requirements.txt  roadmapdict.py  run.ps1  sandpit2.py  sandpit3.py  sandpit4.py  sandpit5.py  setup.cfg  test.py  zh_CN_timeline_settings.json
.github/: FUNDING.yml
.github/workflows/: ci.yaml  gen_ubuntu_test_image.yaml  generate_examples.yaml  lint.yaml  manual_release_trigger.yaml  release-on-github.yaml  release.yaml  secret.yaml
ci/: version_determiner.py  version_retriever.py  version_writer.py
docs/: index.md
docs/source/: changelog.rst  conf.py  extra.css  faq.rst  getting_started.rst  index.rst  tutorial.rst
generator/: footer.py  group.py  marker.py  milestone.py  painter.py  roadmap.py  task.py  timeline.py  timelineitem.py  timelinemode.py  title.py
roadmapper/: colourpalette.py  footer.py  group.py  marker.py  milestone.py  painter.py  roadmap.py  task.py  timeline.py  timelineitem.py  title.py
sandpit/: generator.py  roadmapdict.py  sandpit5.py  sandpit6.py
src/: _test_roadmapper.py  debug.py  demo.py  generate_anatomy_images.py  generate_banner_images_custom.py  generate_banner_images_theme.py  generate_gallery.py  generate_gallery_images.py  generate_wiki_images.py  test-cases.py  test_cases.py  test_gallery.py  test_roadmapper.py
src/json/: chinese.json  de_DE_timeline_settings.json  ja_JP_timeline_settings.json  ko_KR_timeline_settings.json  rainbow-unicode.json  rainbow.json  vintage.json  zh_TW_timeline_settings.json
src/roadmapper/: alignment.py  colourpalette.py  colourtheme.py  footer.py  group.py  helper.py  logo.py  marker.py  milestone.py  painter.py  roadmap.py  subtitle.py  task.py  timeline.py  timelineitem.py  timelineitemgroup.py  timelineitemyear.py  timelinelocale.py  timelinemode.py  title.py  version.py
src/tests/: .gitignore  compare_generated_roadmaps_test.py  conftest.py  generate_test_roadmap.py  roadmap_draw_test.py  test_alignment.py  test_cases.py  test_cases_svg.py  test_defects.py  (+6 more)
(+5 files in other folders)
