[metadata]
name = roadmapper
version = 0.2.0
authors = CS Goh
description = Roadmapper. A Roadmap-as-Code (RaC) tool for generating a roadmap by using python code
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
requires-python = ">=3.10"
classifiers = 
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable


[options]
install_requires =
    Pillow >= 9.3.0
    python-dateutil >= 2.8.2
package_dir =
    =src
packages=find:

[options.packages.find]
where=src

[project.urls]
"Homepage" = "https://github.com/csgoh/roadmapper"
"Bug Tracker" = "https://github.com/csgoh/roadmapper/issues"